--- a/ogtag/test-image.html
+++ b/ogtag/test-image.html
@@ -16,11 +16,14 @@
           function redirectToAnotherPage() {
               setTimeout(function() {
                   window.location.href = "https://go420-digital-storefront-dev.phl.apse1.git.np-api.fwd.com/agent/50000979";
-              }, 10000); // Delay of 1 seconds
+              }, 10000); // Delay of 10 seconds
           }
   
           window.onload = redirectToAnotherPage;
       </script>
 </head>
-<body></body>
+<body>
+    <img src="https://ps.w.org/wonderm00ns-simple-facebook-open-graph-tags/assets/banner-772x250.png?rev=2857607" width="300" height="300" />
+    Redirecting..
+</body>
 </html>
